--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         }
 
         window.onload = function() {
-            const liffId = 'YOUR_LIFF_ID'; // ここにLIFF IDを入れてな
+            const liffId = '2006439613-w78QOaDY'; // ここにLIFF IDを入れてな
             initializeApp(liffId);
         };
     </script>
 </head>
 <body>
-    <h1>テストメッセージ送信</h1>
+    <h1>テストメッセージだよ</h1>
     <button id="sendButton">テストメッセージを送る</button>
 </body>
 </html>
