--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>LIFF App</title>
-    <script src="https://liff.line.me/2.1/sdk.js"></script>
-    <script>
-        function initializeLiff(myLiffId) {
-            liff.init({ liffId: myLiffId })
-                .then(() => {
-                    if (!liff.isLoggedIn()) {
-                        liff.login();
-                    }
-                })
-                .catch(err => console.error(err));
-        }
-
-        function sendMessages() {
-            const messages = Array(10).fill({ type: 'text', text: 'テスト' }); // テストメッセージを10回作成
-
-            liff.sendMessages(messages).then(() => {
-                alert('メッセージを10回送信しました！');
-            }).catch(err => {
-                alert('メッセージの送信に失敗しました！');
-                console.error(err);
-            });
-        }
+<html lang="jp" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XP LIFF</title>
+    <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+    <script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", () => {
+      liff
+        .init({
+          liffId: '<LIFF_ID>'
+        })
+        .then(() => {
+          document.getElementById('go').addEventListener('click', () => {
+            if (!liff.isInClient()) {
+              document.getElementById('log').value += 'sendMessagesText ng\n';
+            } else {
+              liff.sendMessages([{
+                'type': 'text',
+                'text': document.getElementById('sendMessagesTextText').value
+              }]).then(function() {
+                document.getElementById('log').value += 'sendMessagesText completed\n';
+              }).catch(function(error) {
+                document.getElementById('log').value += 'sendMessagesText()=' + error + '\n';
+              });
+            }
+          });
+        })
+        .catch((err) => {
+          document.getElementById('log').value = 'init ng\n' + err;
+        });
+    });
     </script>
-</head>
-<body>
-    <h1>LIFFアプリ</h1>
-    <button onclick="sendMessages()">テストメッセージを送信</button>
-    <script>
-        initializeLiff('2006439613-w78QOaDY');
-    </script>
-</body>
+  </head>
+  <body>
+    <div>
+      <h3>メッセージを送信する</h3>
+      <div>text<input type="text" id="sendMessagesTextText" placeholder="text" value=""/></div>
+      <input type="button" id="go" value="実行"/>
+      <textarea id="log" style="width:96%;height:100px;"></textarea>
+    </div>
+  </body>
 </html>
