--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     document.addEventListener("DOMContentLoaded", () => {
       liff
         .init({
-          liffId: '<LIFF_ID>'
+          liffId: '2006439613-w78QOaDY'
         })
         .then(() => {
           document.getElementById('go').addEventListener('click', () => {
