--- a/index.html
+++ b/index.html
@@ -3,37 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XP LIFF</title>
+    <title>LIFF User Info</title>
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script type="text/javascript">
     document.addEventListener("DOMContentLoaded", () => {
       liff
         .init({
-          liffId: '2006439613-w78QOaDY' // ここにLIFF IDを入れる
+          liffId: '2006439463-YBVBvLPr' // LIFF IDを入力
         })
         .then(() => {
-          // ユーザーがまだログインしていない場合、自動的にログインさせる
           if (!liff.isLoggedIn()) {
-            liff.login(); // 権限をリクエストする
+            liff.login(); // ユーザーがログインしていなければログインをリクエスト
+          } else {
+            // ユーザー情報を取得
+            liff.getProfile().then(profile => {
+              document.getElementById('userInfo').innerText = `
+                ユーザー名: ${profile.displayName}
+                ユーザーID: ${profile.userId}
+                プロフィール画像: ${profile.pictureUrl}
+              `;
+            }).catch(err => {
+              document.getElementById('userInfo').innerText = 'ユーザー情報を取得できませんでした: ' + err;
+            });
           }
-
-          document.getElementById('go').addEventListener('click', () => {
-            if (!liff.isInClient()) {
-              document.getElementById('log').value += 'sendMessagesText ng\n';
-            } else {
-              const messageText = document.getElementById('sendMessagesTextText').value;
-              const messages = Array(10).fill({
-                'type': 'text',
-                'text': messageText
-              });
-
-              liff.sendMessages(messages).then(function() {
-                document.getElementById('log').value += 'sendMessagesText completed\n';
-              }).catch(function(error) {
-                document.getElementById('log').value += 'sendMessagesText()=' + error + '\n';
-              });
-            }
-          });
         })
         .catch((err) => {
           document.getElementById('log').value = 'init ng\n' + err;
@@ -43,9 +35,8 @@
   </head>
   <body>
     <div>
-      <h3>メッセージを送信する</h3>
-      <div>text<input type="text" id="sendMessagesTextText" placeholder="text" value=""/></div>
-      <input type="button" id="go" value="実行"/>
+      <h3>ユーザー情報</h3>
+      <div id="userInfo"></div>
       <textarea id="log" style="width:96%;height:100px;"></textarea>
     </div>
   </body>
