--- a/index.html
+++ b/index.html
@@ -6,38 +6,62 @@
     <title>LIFF User Info</title>
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", () => {
-      liff
-        .init({
+      document.addEventListener("DOMContentLoaded", () => {
+        
+        liff.init({
           liffId: '2006439463-YBVBvLPr' // LIFF IDを入力
         })
         .then(() => {
+          
           if (!liff.isLoggedIn()) {
             liff.login(); // ユーザーがログインしていなければログインをリクエスト
           } else {
             // ユーザー情報を取得
-            liff.getProfile().then(profile => {
-              document.getElementById('userInfo').innerText = `
+            liff.getProfile()
+            .then(profile => {
+              const userInfo = `
                 ユーザー名: ${profile.displayName}
                 ユーザーID: ${profile.userId}
                 プロフィール画像: ${profile.pictureUrl}
               `;
-            }).catch(err => {
+              document.getElementById('userInfo').innerText = userInfo;
+
+              // 取得した情報をLINEメッセージとして送信
+              document.getElementById('sendMessage').addEventListener('click', () => {
+                liff.sendMessages([
+                  {
+                    type: 'text',
+                    text: userInfo // 送信するメッセージの内容
+                  }
+                ]).then(() => {
+                  alert('プロフィール情報を送信しました！');
+                }).catch(err => {
+                  alert('メッセージ送信に失敗しました: ' + err);
+                });
+              });
+
+            })
+            .catch(err => {
               document.getElementById('userInfo').innerText = 'ユーザー情報を取得できませんでした: ' + err;
             });
           }
+
         })
         .catch((err) => {
           document.getElementById('log').value = 'init ng\n' + err;
         });
-    });
+
+      });
     </script>
   </head>
+  
   <body>
     <div>
       <h3>ユーザー情報</h3>
       <div id="userInfo"></div>
+      <button id="sendMessage">LINEにプロフィール情報を送る</button>
       <textarea id="log" style="width:96%;height:100px;"></textarea>
     </div>
   </body>
 </html>
+
