--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
-liff
-  .sendMessages([
-    {
-      type: "text",
-      text: "Hello, World!",
-    },
-  ])liff
-  .sendMessages([
-    {
-      type: "text",
-      text: "Hello, World!",
-    },
-  ])
+<!DOCTYPE html>
+<html lang="jp" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XP LIFF</title>
+    <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+    <script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", () => {
+      liff
+        .init({
+          liffId: '2006439463-YBVBvLPr' // ここにLIFF IDを入れる
+        })
+        .then(() => {
+          if (!liff.isLoggedIn()) {
+            liff.login(); // ユーザーにログインさせる
+          }
+
+          document.getElementById('go').addEventListener('click', () => {
+            if (!liff.isInClient()) {
+              document.getElementById('log').value += 'Not in LINE client\n';
+              return;
+            }
+
+            liff.sendMessages([
+              {
+                type: "text",
+                text: "Hello, World!",
+              },
+            ])
+            .then(() => {
+              document.getElementById('log').value += 'Message sent successfully\n';
+            })
+            .catch((error) => {
+              document.getElementById('log').value += 'Error sending message: ' + error + '\n';
+            });
+          });
+        })
+        .catch((err) => {
+          document.getElementById('log').value = 'init ng\n' + err;
+        });
+    });
+    </script>
+  </head>
+  <body>
+    <div>
+      <h3>メッセージを送信する</h3>
+      <input type="button" id="go" value="メッセージ送信"/>
+      <textarea id="log" style="width:96%;height:100px;"></textarea>
+    </div>
+  </body>
+</html>
