--- a/index.html
+++ b/index.html
@@ -1,66 +1,69 @@
 <!DOCTYPE html>
-<html lang="jp" dir="ltr">
-  <head>
-    <meta charset="utf-8">
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>オープンチャット用LIFF</title>
-    <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
-    <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", () => {
-      liff
-        .init({
-          liffId: '2006439463-YBVBvLPr' // LIFF IDをここに入力
-        })
-        .then(() => {
-          // ユーザーがログインしていない場合はログインを促す
-          if (!liff.isLoggedIn()) {
-            liff.login();
-          } else {
-            // 権限が必要な場合は確認
-            checkPermissions();
-          }
+    <title>簡単なチャット</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+        #chat-box {
+            width: 60%;
+            height: 400px;
+            border: 2px solid #ccc;
+            padding: 10px;
+            background-color: white;
+            overflow-y: scroll;
+            margin: 20px auto;
+        }
+        #chat-input {
+            width: 60%;
+            margin: 10px auto;
+            display: flex;
+        }
+        #chat-input input {
+            flex-grow: 1;
+            padding: 10px;
+            border: 2px solid #ccc;
+            border-radius: 4px;
+            margin-right: 10px;
+        }
+        #chat-input button {
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
 
-          document.getElementById('send').addEventListener('click', () => {
-            const messageText = document.getElementById('messageInput').value;
-            sendMessage(messageText);
-          });
-        })
-        .catch((err) => {
-          console.error('LIFF Initialization failed: ', err);
-        });
-    });
+    <div id="chat-box"></div>
 
-    function checkPermissions() {
-      liff.getProfile().then(profile => {
-        console.log('ユーザープロフィールを取得しました:', profile);
-      }).catch(error => {
-        console.error('プロフィール取得に失敗:', error);
-      });
-    }
+    <div id="chat-input">
+        <input type="text" id="message" placeholder="メッセージを入力">
+        <button onclick="sendMessage()">送信</button>
+    </div>
 
-    function sendMessage(message) {
-      if (!liff.isInClient()) {
-        alert('この機能はLINEアプリ内でのみ利用できます。');
-        return;
-      }
+    <script>
+        const chatBox = document.getElementById('chat-box');
 
-      // メッセージ送信
-      liff.sendMessages([{
-        type: 'text',
-        text: message
-      }])
-      .then(() => {
-        console.log('メッセージを送信しました:', message);
-      })
-      .catch((error) => {
-        console.error('メッセージ送信エラー:', error);
-      });
-    }
+        function sendMessage() {
+            const messageInput = document.getElementById('message');
+            const message = messageInput.value;
+            if (message.trim() !== '') {
+                const newMessage = document.createElement('p');
+                newMessage.textContent = `あなた: ${message}`;
+                chatBox.appendChild(newMessage);
+                messageInput.value = '';
+                chatBox.scrollTop = chatBox.scrollHeight; // チャットボックスを最下部にスクロール
+            }
+        }
     </script>
-  </head>
-  <body>
-    <h3>オープンチャットでメッセージを送信</h3>
-    <input type="text" id="messageInput" placeholder="メッセージを入力" />
-    <button id="send">送信</button>
-  </body>
+
+</body>
 </html>
