--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="font-bold mb-4">デバイスベンチマーク</h1>
+        <h1 class="font-bold mb-4">短気の短気による短気のためのベンチマーク</h1>
 
         <div class="section">
             <h2 class="font-semibold mb-4">ベンチマーク結果</h2>
